Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkgcore trunk:

* All pkgcore internal functions now are prefixed with __; ebuilds
  and eclasses should never touch them.

* For performance debugging of EBD, PKGCORE_PERF_DEBUG=1 was added.

* Defined phases is now trusted in full, and used to control exactly
  what phases are actually ran.  This in conjunction w/ some relaxation
  of a few protections (namely, if pkgcore just generated the env dump,
  and we know it's from our version/machinery, then we can directly
  source that dump rather than doing protective scrubbing).  End result
  is that for build -> binpkg -> install, for example bsdiff went from
  4.9s to 2.1s; diffball went from ~12.5s to ~9.8s.  Gain primarily
  is for either huge environments, or small pkgs.

* Minor round of metadata regen optimization; 18-20% faster now.

* Heavy environment cleanup; pkgcore now generally doesn't expose
  any real functionality to ebuilds/eclasses that could be accidentally
  relied upon (all of it is prefixed with pkgcore_, making it obvious
  they shouldn't be using it).

* Fix issue #31; empty GENTOO_MIRRORS breaks portage conf support.


pkgcore 0.8: August 4th, 2012

* Fix fetch support broken by gentoo's recent enabling of whirlpool
  checksum.

* Python 2.4 support was dropped.

* Fix a longstanding potential bug in spawn's fd reassignment;
  if fed {2:3, 3:2, 4:6}, dependent on python dict ordering, it
  was possible for it to inadvertantly stomp fd 4 during the
  final reassignment.  Haven't seen any signs it's occured in the
  wild, but the potential is there, thus fixed.

* Gentoo's unpacker eclass is sensitive to the return code of
  assert; this is outside of pms rules, but we've matched portage
  behaviour to keep things working

* Fixed pinspect portageq envvar support.

* Added `pconfig world` for world file manipulation.
